--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@ body {
 text-align:center;
 text-shadow: 2px 2px #000000; 
 font-size: 36px;
-background-color:  # 1E90FF;
+
+  background-color: #1e90f2;  
   color: black;
 
 
@@ -236,9 +237,6 @@ be a great success, being run by Peter Byewater and Ross Chanadella, and then Ca
 In 2008 the name was changed to the Curzon club. It is now being run by Craig Charlton, Richard Cowans, Steven Charlton and a great bunch of lads. 
 </div>
 </div>
-<div></div>
-<div></div>
-<div></div>
  </section>
 </body>
 </html>
