--- a/index2.html
+++ b/index2.html
@@ -13,8 +13,7 @@ body {
   background-repeat: no-repeat;
   background-image: */
     font-family: 'Roboto Condensed', sans-serif;  
-  
-  font-size: 14px;
+  font-size: 16px;
     overflow: hidden;
     text-transform: none;
     font-weight: bold;
@@ -54,7 +53,7 @@ body {
   top: 50%;
 }
 .menu span {
-  width: 90px;
+  width: 70px;
   height: 70px;
   position: absolute;
   right: 0;
@@ -84,7 +83,7 @@ body {
 }
 .menu .menuContent {
   position: absolute;
-  width: 127%;
+  width: 100%;
   height: 100%;
   line-height: 40px;
   right: 0px;
@@ -153,26 +152,21 @@ font-size: 36px;
 display: flex;
 flex-wrap: wrap;
 background-color: 3a5ca3;
-/*padding-left: 7em;*/
+padding-left: 20em;
 
 }
 
 .flex-container > div {
 background-color: 3a5ca3;
-width: 80em;
+width: 60em;
 height: 400px;
 margin: 40px;
-padding: 20px;
+padding: 30px;
 font-size: 20px;
-align-content: center;
+align-content: justify;
 text-align-last: center;
 }
 
-img {
-
-width: 100%;
-
-}
  /* p {
   text-align: center;
   padding-left: 350px;
@@ -191,7 +185,7 @@ width: 100%;
 </head>
 <body>
   <section>
-    
+    <img src="cfi.png">
     <div class='menu'>
   <span class='toggle'>
     <i></i>
@@ -230,27 +224,17 @@ width: 100%;
  
     
 <div class="flex-container">
-  <div><img src="cfi.png">
-    <BR>
   <div>
+ Welcome to our friendly Fishing club based in Long Eaton (East Midlands). 
 
-    <BR>
-    <BR>
- Welcome to our friendly Fishing club based in Long Eaton (East Midlands). <br>
- <br>
+We are a small club with 20 anglers, that all get together every Sunday for a great day out.<bt>
 
-We are a small club with 20 anglers, that all get together every Sunday for a great day out.<br>
-<BR>
+The club has been running for approximately 50 years where it was originally the Granville club. 
 
-The club has been running for approximately 50 years where it was originally the Granville club. <br>
-<BR>
+Formed by Jonny Spray and friends in the late 80's. We moved to the Zingari club where it continued to 
+be a great success, being run by Peter Byewater and Ross Chanadella, and then Carl Fretwell
 
-Formed by Jonny Spray and friends in the late 80's.<BR>
-<BR> We moved to the Zingari club where it continued to 
-be a great success, being run by Peter Byewater and Ross Chanadella, and then Carl Fretwell<BR>
-<BR>
 In 2008 the name was changed to the Curzon club. It is now being run by Craig Charlton, Richard Cowans, Steven Charlton and a great bunch of lads. 
-</div>
 </div>
 </div>
  </section>
