index.html update

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ width: 100%;
     <ul>
       <li>Home</li>
       <li>Blog</li>
-      <li>Gallery</li>
+      <li><a href="gallery.html">Gallery </a></li>
       <li>Join Us</li>
       <li>Leauge</li>
       <li>Match Sheet</li>
@@ -249,7 +249,10 @@ Formed by Jonny Spray and friends in the late 80's.<BR>
 <BR> We moved to the Zingari club where it continued to 
 be a great success, being run by Peter Byewater and Ross Chanadella, and then Carl Fretwell<BR>
 <BR>
-In 2008 the name was changed to the Curzon club. It is now being run by Craig Charlton, Richard Cowans, Steven Charlton and a great bunch of lads. 
+In 2008 the name was changed to the Curzon club. It is now being run by Craig Charlton, Richard Cowans, Steven Charlton and a great bunch of lads. <BR>
+<BR>
+<!-- <div><img src="home_footer.jpg"> -->
+</div>
 </div>
 </div>
 </div>
